feature: Add chart route and controller
